Proyecto Final Javascript

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<!-- Key Words-->
 	<meta name="keywords" content="arte, pintura, pouring, paint, artist, art">
 	<!-- Icono del sitio-->
+	<link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
 	<!-- Titulo de esta pagina-->
 	<title>Karina Aguirre | ¡Bienvenidos a mi taller!</title>
 </head>
